--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -45,35 +45,18 @@ evelynecolacogarcia1988@gmail.com</div>
 
 <h3>EXPÉRIENCE PROFESSIONNELLE</h3>
 
-<p>Vendeuse en boulangerie	 Boulangerie Thirion SRL (CDD)
-	 9 juillet 2019 au 19 janvier 2020
-
-Vendeuse en boulangerie	 SA Thirion Distribution (CDI)
-	 27 août 2018 à 8 juillet 2019
-
-Vendeuse en boulangerie	 Boulangerie Michel d’Ohain (CDI)
-	 25 avril 2013 au 26 août 2018
-
-Vendeuse en boulangerie	 Boulangerie Michel d’Ohain (période d’essai)
-	 30 décembre 2012 au 28 mars 2013
-
-Employée administrative	 Hôpital de Tubize (CDD- Contrat de remplacement)
-	 Avril à août 2012
-
-Secrétaire médicale		Hôpital de Tubize (stage)
-		Février et mars 2012
-
-Agent d’Accueil		Clinique du Bois de la Pierre, Wavre (stage)
-		Novembre et décembre 2011
-
-Employée administrative	Manfroy cheminée, Waterloo (Stage)
-	Octobre 2010
-
-Vendeuse	Champion Mestdagh, Braine-l’Alleud (Intérim)
-	Juillet 2008 - janvier 2009
-
-Agent d’accueil	Musée du jouet, Bruxelles (Stage)
-	Mars 2006</p>
+<ul>
+	<li>Vendeuse en boulangerie	 Boulangerie Thirion SRL (CDD) - 9 juillet 2019 au 19 janvier 2020</li>
+	<li>Vendeuse en boulangerie	- SA Thirion Distribution (CDI) - 27 août 2018 à 8 juillet 2019</li>
+	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (CDI) - 25 avril 2013 au 26 août 2018</li>
+	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (période d’essai) - 30 décembre 2012 au 28 mars 2013</li>
+	<li>Employée administrative	- Hôpital de Tubize (CDD- Contrat de remplacement) - Avril à août 2012</li>
+	<li>Secrétaire médicale	- Hôpital de Tubize (stage) - Février et mars 2012</li>
+	<li>Agent d’Accueil	- Clinique du Bois de la Pierre, Wavre (stage) - Novembre et décembre 2011</li>
+	<li>Employée administrative	- Manfroy cheminée, Waterloo (Stage) - Octobre 2010</li>
+	<li>Vendeuse - Champion Mestdagh, Braine-l’Alleud (Intérim) - Juillet 2008 - janvier 2009</li>
+	<li>Agent d’accueil	Musée du jouet, Bruxelles (Stage) - Mars 2006</li>
+</ul>
 
 <h3>LANGUES</h3>
 
