cv complet manque que le css

--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -10,7 +10,7 @@
 <div>
 Place Gambetta, 13
 6044 Roux
-Célibataire
+Célibataire (cohabitante légale), 1 enfant
 Portugaise, née le 06 mai 1988
 0494 69 64 84
 evelynecolacogarcia1988@gmail.com</div>
