--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -8,12 +8,12 @@
 <body>
 <h1>EVELYNE COLAÇO GARCIA</h1>
 <div>
-Place Gambetta, 13
-6044 Roux
+0494 69 64 84
+13 Place Gambetta, 6044 Roux
 Célibataire (cohabitante légale), 1 enfant
 Portugaise, née le 06 mai 1988
-0494 69 64 84
-evelynecolacogarcia1988@gmail.com</div>
+<a href="evelynecolacogarcia1988@gmail.com">Send email</a>
+<a href="www.linkedin.com/in/evelyne-colaço-garcia-27962720a" target="_blank">LinkedIn</a></div>
 <h2>Junior Web Developper</h2>
 <q>Sens de l’adaptation, sociable, organisée</q>
 
