--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="ChineseFarmer.css">
   </head>
 <body>
-<h1>EVELYNE COLAÇO GARCIA</h1>
 <div>
-0494 69 64 84
-13 Place Gambetta, 6044 Roux
-Célibataire (cohabitante légale), 1 enfant
-Portugaise, née le 06 mai 1988
+<h1>EVELYNE COLAÇO GARCIA</h1>
+<p>0494 69 64 84</p>
+<p>13 Place Gambetta, 6044 Roux</p>
+<p>Célibataire (cohabitante légale), 1 enfant</p>
+<p>Portugaise, née le 06 mai 1988</p>
 <a href="evelynecolacogarcia1988@gmail.com">Send email</a>
 <a href="www.linkedin.com/in/evelyne-colaço-garcia-27962720a" target="_blank">LinkedIn</a></div>
 <h2>Junior Web Developper</h2>
