encore des modifs

--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -2,22 +2,23 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evelyne Colaço Garcia</title>
-  <link rel="stylesheet" href="ChineseFarmer.css">
+  <link rel="stylesheet" type="text/css" href="cv.css">
   </head>
 <body>
-<div>
-<h1>EVELYNE COLAÇO GARCIA</h1>
+<div class="infos">
+<h2>Evelyne Colaço Garcia</h2>
 <p>0494 69 64 84</p>
 <p>13 Place Gambetta, 6044 Roux</p>
 <p>Célibataire (cohabitante légale), 1 enfant</p>
-<p>Portugaise, née le 06 mai 1988</p>
-<a href="evelynecolacogarcia1988@gmail.com">Send email</a>
-<a href="www.linkedin.com/in/evelyne-colaço-garcia-27962720a" target="_blank">LinkedIn</a></div>
-<h2>Junior Web Developper</h2>
-<q>Sens de l’adaptation, sociable, organisée</q>
-
-<h3>ÉTUDES ET FORMATIONS</h3>
+<p>Portugaise, née le 06 mai 1988</p></div>
+<div class="poste"><h1>Junior Web Developper</h1>
+<q><em>résiliente, sociable, organisée</em></q><br><br>
+<a href="evelynecolacogarcia1988@gmail.com"><img id="email" src="https://image.flaticon.com/icons/png/512/732/732200.png"></a>
+<a href="www.linkedin.com/in/evelyne-colaço-garcia-27962720a" target="_blank"><img id="linkedin" src="https://image.flaticon.com/icons/png/512/174/174857.png"></a></div>
+<div class="photo"><img id="photo" src="https://media-exp1.licdn.com/dms/image/C4E03AQGe5ZIdRPAbhQ/profile-displayphoto-shrink_800_800/0/1620902215163?e=1628121600&v=beta&t=xDxpbtxxDVoBE7Ar3DXPXiSi--J6Tsqth7ZcB708z3k" alt="Photo de moi"></div>
+<div class="past"><h3>ÉTUDES ET FORMATIONS</h3>
 <ul>
 	<li>BECODE Charleroi</li>
 		<ul>
@@ -30,35 +31,58 @@
 		</ul>
 	</ul>
 
+<div></div>
+
 <h4><b>FORMATIONS via LE FOREM DE NIVELLES</b></h4>
 		<ul>
-			<li>SECRÉTARIAT MÉDICAL <i>Septembre 2011 - mars 2012</i></li>
-			<li>LOGICIEL COMPTABLE <i>Novembre 2011 - janvier 2011</i></li>
-			<li>SECRÉTARIAT BUREAUTIQUE	<i>Février 2010 - septembre 2010</i></li>
-			<li>NÉERLANDAIS <i>Mars et mai 2009</i></li>
-			<li>ANGLAIS	<i>Juin 2008</i></li>
+			<li>SECRÉTARIAT MÉDICAL </li>
+				<ul><li><i>Septembre 2011 - mars 2012</i></li></ul>
+			<li>LOGICIEL COMPTABLE </li>
+				<ul><li><i>Novembre 2011 - janvier 2011</i></li></ul>
+			<li>SECRÉTARIAT BUREAUTIQUE</li>
+				<ul><li><i>Février 2010 - septembre 2010</i></li></ul>	
+			<li>NÉERLANDAIS </li>
+				<ul><li><i>Mars et mai 2009</i></li></ul>
+			<li>ANGLAIS	</li>
+				<ul><li><i>Juin 2008</i></li></ul>
 		</ul>
+
+<div></div>
 
 <h4><b>CESS	AGENT D’ACCUEIL ET TOURISME</b></h4>
 <ul>
 	<li>Institut des Sacrés-Cœurs centre de Waterloo <i>2000 - 2006</i></li>
 </ul>
+</div>
 
+<div class="exp">
 <h3>EXPÉRIENCE PROFESSIONNELLE</h3>
 
 <ul>
-	<li>Vendeuse en boulangerie	 Boulangerie Thirion SRL (CDD) - 9 juillet 2019 au 19 janvier 2020</li>
-	<li>Vendeuse en boulangerie	- SA Thirion Distribution (CDI) - 27 août 2018 à 8 juillet 2019</li>
-	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (CDI) - 25 avril 2013 au 26 août 2018</li>
-	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (période d’essai) - 30 décembre 2012 au 28 mars 2013</li>
-	<li>Employée administrative	- Hôpital de Tubize (CDD- Contrat de remplacement) - Avril à août 2012</li>
-	<li>Secrétaire médicale	- Hôpital de Tubize (stage) - Février et mars 2012</li>
-	<li>Agent d’Accueil	- Clinique du Bois de la Pierre, Wavre (stage) - Novembre et décembre 2011</li>
-	<li>Employée administrative	- Manfroy cheminée, Waterloo (Stage) - Octobre 2010</li>
-	<li>Vendeuse - Champion Mestdagh, Braine-l’Alleud (Intérim) - Juillet 2008 - janvier 2009</li>
-	<li>Agent d’accueil	Musée du jouet, Bruxelles (Stage) - Mars 2006</li>
+	<li>Vendeuse en boulangerie	 Boulangerie Thirion SRL (CDD)</li>
+	<ul><li><i>9 juillet 2019 au 19 janvier 2020</i></li></ul> 
+	<li>Vendeuse en boulangerie	- SA Thirion Distribution (CDI)</li>
+	<ul><li><i>27 août 2018 à 8 juillet 2019</i></li></ul>
+	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (CDI)</li>
+	<ul><li><i> avril 2013 au 26 août 2018</i></li></ul>
+	<li>Vendeuse en boulangerie	- Boulangerie Michel d’Ohain (période d’essai)</li>
+	<ul><li><i>30 décembre 2012 au 28 mars 2013</i></li></ul>
+	<li>Employée administrative	- Hôpital de Tubize (CDD- Contrat de remplacement)</li>
+	<ul><li><i>Avril à août 2012</i></li></ul>
+	<li>Secrétaire médicale	- Hôpital de Tubize (stage)</li>
+	<ul><li><i>Février et mars 2012</i></li></ul>
+	<li>Agent d’Accueil	- Clinique du Bois de la Pierre, Wavre (stage)</li>
+	<ul><li><i>Novembre et décembre 2011</i></li></ul>
+	<li>Employée administrative	- Manfroy cheminée, Waterloo (Stage)</li>
+	<ul><li><i>Octobre 2010</i></li></ul>
+	<li>Vendeuse - Champion Mestdagh, Braine-l’Alleud (Intérim)</li>
+	<ul><li><i>Juillet 2008 - janvier 2009</i></li></ul>
+	<li>Agent d’accueil	Musée du jouet, Bruxelles (Stage)</li>
+	<ul><li><i>Mars 2006</i></li></ul>
 </ul>
+</div>
 
+<div>
 <h3>LANGUES</h3>
 
 <ul>
@@ -67,7 +91,11 @@
 	<li>Espagnol :	Bonne compréhension écrite et orale pour conversation de tous les jours</li>
 	<li>Anglais :	Bonne compréhension écrite et orale pour conversation de tous les jours</li>
 </ul>
+</div>
 
+<div></div>
+
+<div class="hobbies">
 <h3>LOISIRS</h3>
 
 <ul>
@@ -80,7 +108,7 @@
 		<li>Horreur</li>
 		<li>Romance</li>
 	</ul>
-	<li>Promenade (surtout avec mon chien)</li>
+	<li>Promenade (surtout avec ma famille)</li>
 	<li>Musique</li>
 	<li>Films</li>
 	<ul>
@@ -90,6 +118,6 @@
 		<li>Disney</li>
 	</ul>
 </ul>
-
+</div>
 </body>
 </html>
