--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -22,17 +22,21 @@
 <ul>
 	<li>BECODE Charleroi</li>
 		<ul>
-			<li>Junior Web Developper <i>du 25 mai 2021 à aujourd'hui</i></li>
+			<li>Junior Web Developper</li>
+			<ul><li><i>du 25 mai 2021 à aujourd'hui</i></li>
+			</ul>
 		</ul>
 
 	<li>HACKEUSES CLUB BECODE Charleroi</li>
 		<ul>
-			<li>Découverte des différents métiers du numérique <i>du 30 mars 2021 au 7 mai 2021</i></li>
+			<li>Découverte des différents métiers du numérique</li>
+			<ul><li><i>du 30 mars 2021 au 7 mai 2021</i></li>
+			</ul>
 		</ul>
-	</ul>
+</ul>
 
-<div></div>
-
+</div>
+<div>
 <h4><b>FORMATIONS via LE FOREM DE NIVELLES</b></h4>
 		<ul>
 			<li>SECRÉTARIAT MÉDICAL </li>
@@ -47,8 +51,8 @@
 				<ul><li><i>Juin 2008</i></li></ul>
 		</ul>
 
-<div></div>
-
+</div>
+<div>
 <h4><b>CESS	AGENT D’ACCUEIL ET TOURISME</b></h4>
 <ul>
 	<li>Institut des Sacrés-Cœurs centre de Waterloo <i>2000 - 2006</i></li>
@@ -92,8 +96,6 @@
 	<li>Anglais :	Bonne compréhension écrite et orale pour conversation de tous les jours</li>
 </ul>
 </div>
-
-<div></div>
 
 <div class="hobbies">
 <h3>LOISIRS</h3>
