--- a/EvelyneCG.html
+++ b/EvelyneCG.html
@@ -9,10 +9,11 @@
 <body>
 <div class="infos">
 <h2>Evelyne Colaço Garcia</h2>
-<p>0494 69 64 84</p>
-<p>13 Place Gambetta, 6044 Roux</p>
+<p>Portugaise, née le 06 mai 1988</p>
 <p>Célibataire (cohabitante légale), 1 enfant</p>
-<p>Portugaise, née le 06 mai 1988</p></div>
+<p>0494 69 64 84</p>
+<p>13 Place Gambetta, 6044 Roux</p></div>
+
 <div class="poste"><h1>Junior Web Developper</h1>
 <q><em>résiliente, sociable, organisée</em></q><br><br>
 <a href="evelynecolacogarcia1988@gmail.com"><img id="email" src="https://image.flaticon.com/icons/png/512/732/732200.png"></a>
@@ -55,7 +56,10 @@
 <div>
 <h4><b>CESS	AGENT D’ACCUEIL ET TOURISME</b></h4>
 <ul>
-	<li>Institut des Sacrés-Cœurs centre de Waterloo <i>2000 - 2006</i></li>
+	<li>Institut des Sacrés-Cœurs centre de Waterloo</li>
+		<ul>
+			<li><i>2000 - 2006</i></li>
+		</ul>
 </ul>
 </div>
 
